--- a/Striped.csproj
+++ b/Striped.csproj
@@ -5,6 +5,8 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <RootNamespace>GraphicsProgramming</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
