--- a/Striped.csproj
+++ b/Striped.csproj
@@ -10,11 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenTK" Version="4.7.7" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Engine\ComponentSystem" />
     </ItemGroup>
 
 </Project>
