--- a/Striped.csproj
+++ b/Striped.csproj
@@ -14,4 +14,8 @@
       <PackageReference Include="OpenTK" Version="4.7.7" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Assets" />
+    </ItemGroup>
+
 </Project>
