--- a/Striped.csproj
+++ b/Striped.csproj
@@ -10,13 +10,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AssimpNet" Version="5.0.0-beta1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="OpenTK" Version="4.7.7" />
       <PackageReference Include="StbImageSharp" Version="2.27.13" />
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Assets" />
+      <Folder Include="Assets\Meshes\Standard" />
     </ItemGroup>
 
 </Project>
