Final commit to the openGL Renderer

--- a/Striped.csproj
+++ b/Striped.csproj
@@ -20,4 +20,8 @@
       <Folder Include="Assets\Meshes\Standard" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="Assets\Shaders\Standard\defaultSkybox.shader" />
+    </ItemGroup>
+
 </Project>
